# symbol_renamer

./: Makefile  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: python-package.yml
src/symbol_renamer/: __init__.py  __main__.py
tests/: test_smoke.py
